prepocess/uv-preprocessed.h

typedef long unsigned int size_t;
typedef int __key_t;
typedef __ssize_t ssize_t;
typedef __uint16_t uint16_t;
typedef __uint64_t uint64_t;
typedef __key_t key_t;
typedef __clockid_t clockid_t;
struct timespec {

  __time_t tv_sec;

  __syscall_slong_t tv_nsec;
# 31 "/usr/include/bits/types/struct_timespec.h" 3 4
};
typedef __socklen_t socklen_t;
extern int inet_pton(int __af, const char *__restrict __cp,
                     void *__restrict __buf)
    __attribute__((__nothrow__, __leaf__));
extern const char *inet_ntop(int __af, const void *__restrict __cp,
                             char *__restrict __buf, socklen_t __len)
    __attribute__((__nothrow__, __leaf__));
typedef union {
  char __size[32];
  long int __align;
} sem_t;
extern int sem_init(sem_t *__sem, int __pshared, unsigned int __value)
    __attribute__((__nothrow__, __leaf__)) __attribute__((__nonnull__(1)));
extern int sem_destroy(sem_t *__sem) __attribute__((__nothrow__, __leaf__))
__attribute__((__nonnull__(1)));
extern int sem_wait(sem_t *__sem) __attribute__((__nonnull__(1)));
extern int sem_trywait(sem_t *__sem) __attribute__((__nothrow__))
__attribute__((__nonnull__(1)));
extern int sem_post(sem_t *__sem) __attribute__((__nothrow__))
__attribute__((__nonnull__(1)));
extern int clock_gettime(clockid_t __clock_id, struct timespec *__tp)
    __attribute__((__nothrow__, __leaf__)) __attribute__((__nonnull__(2)));
typedef struct {
  struct __cancel_jmp_buf_tag __cancel_jmp_buf[1];
  void *__pad[4];
} __pthread_unwind_buf_t __attribute__((__aligned__));
typedef pthread_once_t uv_once_t;
typedef pthread_t uv_thread_t;
typedef pthread_mutex_t uv_mutex_t;
typedef pthread_rwlock_t uv_rwlock_t;
typedef sem_t uv_sem_t;
typedef pthread_cond_t uv_cond_t;
typedef pthread_key_t uv_key_t;
typedef pthread_barrier_t uv_barrier_t;
typedef struct {
  void *handle;
  char *errmsg;
} uv_lib_t;
typedef struct uv_loop_s uv_loop_t;
typedef struct uv_fs_event_s uv_fs_event_t;
typedef struct uv_signal_s uv_signal_t;
typedef struct uv_random_s uv_random_t;
typedef void (*uv_random_cb)(uv_random_t *req, int status, void *buf,
                             size_t buflen);
typedef enum { UV_CLOCK_MONOTONIC, UV_CLOCK_REALTIME } uv_clock_id;
typedef struct {
  int64_t tv_sec;
  int32_t tv_nsec;
} uv_timespec64_t;
typedef struct {
  int64_t tv_sec;
  int32_t tv_usec;
} uv_timeval64_t;
typedef void (*uv_fs_event_cb)(uv_fs_event_t *handle, const char *filename,
                               int events, int status);
typedef void (*uv_signal_cb)(uv_signal_t *handle, int signum);
__attribute__((visibility("default"))) int
uv_signal_start_oneshot(uv_signal_t *handle, uv_signal_cb signal_cb,
                        int signum);
__attribute__((visibility("default"))) int uv_signal_stop(uv_signal_t *handle);
__attribute__((visibility("default"))) void uv_loadavg(double avg[3]);
__attribute__((visibility("default"))) int
uv_fs_event_init(uv_loop_t *loop, uv_fs_event_t *handle);
__attribute__((visibility("default"))) int
uv_fs_event_start(uv_fs_event_t *handle, uv_fs_event_cb cb, const char *path,
                  unsigned int flags);
__attribute__((visibility("default"))) int
uv_fs_event_stop(uv_fs_event_t *handle);
__attribute__((visibility("default"))) int
uv_fs_event_getpath(uv_fs_event_t *handle, char *buffer, size_t *size);
__attribute__((visibility("default"))) int
uv_ip4_addr(const char *ip, int port, struct sockaddr_in *addr);
__attribute__((visibility("default"))) int
uv_ip6_addr(const char *ip, int port, struct sockaddr_in6 *addr);
__attribute__((visibility("default"))) int
uv_ip4_name(const struct sockaddr_in *src, char *dst, size_t size);
__attribute__((visibility("default"))) int
uv_ip6_name(const struct sockaddr_in6 *src, char *dst, size_t size);
__attribute__((visibility("default"))) int
uv_ip_name(const struct sockaddr *src, char *dst, size_t size);
__attribute__((visibility("default"))) int uv_inet_ntop(int af, const void *src,
                                                        char *dst, size_t size);
__attribute__((visibility("default"))) int uv_inet_pton(int af, const char *src,
                                                        void *dst);
__attribute__((visibility("default"))) int
uv_random(uv_loop_t *loop, uv_random_t *req, void *buf, size_t buflen,
          unsigned flags, uv_random_cb cb);
__attribute__((visibility("default"))) int
uv_if_indextoname(unsigned int ifindex, char *buffer, size_t *size);
__attribute__((visibility("default"))) int
uv_if_indextoiid(unsigned int ifindex, char *buffer, size_t *size);
__attribute__((visibility("default"))) int uv_exepath(char *buffer,
                                                      size_t *size);
__attribute__((visibility("default"))) int uv_cwd(char *buffer, size_t *size);
__attribute__((visibility("default"))) int uv_chdir(const char *dir);
__attribute__((visibility("default"))) uint64_t uv_get_free_memory(void);
__attribute__((visibility("default"))) uint64_t uv_get_total_memory(void);
__attribute__((visibility("default"))) uint64_t uv_get_constrained_memory(void);
__attribute__((visibility("default"))) uint64_t uv_get_available_memory(void);
__attribute__((visibility("default"))) int
uv_clock_gettime(uv_clock_id clock_id, uv_timespec64_t *ts);
__attribute__((visibility("default"))) uint64_t uv_hrtime(void);
__attribute__((visibility("default"))) void uv_sleep(unsigned int msec);
__attribute__((visibility("default"))) void uv_disable_stdio_inheritance(void);
__attribute__((visibility("default"))) int uv_dlopen(const char *filename,
                                                     uv_lib_t *lib);
__attribute__((visibility("default"))) void uv_dlclose(uv_lib_t *lib);
__attribute__((visibility("default"))) int
uv_dlsym(uv_lib_t *lib, const char *name, void **ptr);
__attribute__((visibility("default"))) const char *
uv_dlerror(const uv_lib_t *lib);
__attribute__((visibility("default"))) int uv_mutex_init(uv_mutex_t *handle);
__attribute__((visibility("default"))) int
uv_mutex_init_recursive(uv_mutex_t *handle);
__attribute__((visibility("default"))) void
uv_mutex_destroy(uv_mutex_t *handle);
__attribute__((visibility("default"))) void uv_mutex_lock(uv_mutex_t *handle);
__attribute__((visibility("default"))) int uv_mutex_trylock(uv_mutex_t *handle);
__attribute__((visibility("default"))) void uv_mutex_unlock(uv_mutex_t *handle);
__attribute__((visibility("default"))) int uv_rwlock_init(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_destroy(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_rdlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) int
uv_rwlock_tryrdlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_rdunlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_wrlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) int
uv_rwlock_trywrlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_wrunlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) int uv_sem_init(uv_sem_t *sem,
                                                       unsigned int value);
__attribute__((visibility("default"))) void uv_sem_destroy(uv_sem_t *sem);
__attribute__((visibility("default"))) void uv_sem_post(uv_sem_t *sem);
__attribute__((visibility("default"))) void uv_sem_wait(uv_sem_t *sem);
__attribute__((visibility("default"))) int uv_sem_trywait(uv_sem_t *sem);
__attribute__((visibility("default"))) int uv_cond_init(uv_cond_t *cond);
__attribute__((visibility("default"))) void uv_cond_destroy(uv_cond_t *cond);
__attribute__((visibility("default"))) void uv_cond_signal(uv_cond_t *cond);
__attribute__((visibility("default"))) void uv_cond_broadcast(uv_cond_t *cond);
__attribute__((visibility("default"))) int
uv_barrier_init(uv_barrier_t *barrier, unsigned int count);
__attribute__((visibility("default"))) void
uv_barrier_destroy(uv_barrier_t *barrier);
__attribute__((visibility("default"))) int
uv_barrier_wait(uv_barrier_t *barrier);
__attribute__((visibility("default"))) void uv_cond_wait(uv_cond_t *cond,
                                                         uv_mutex_t *mutex);
__attribute__((visibility("default"))) int
uv_cond_timedwait(uv_cond_t *cond, uv_mutex_t *mutex, uint64_t timeout);
__attribute__((visibility("default"))) void uv_once(uv_once_t *guard,
                                                    void (*callback)(void));
__attribute__((visibility("default"))) int uv_key_create(uv_key_t *key);
__attribute__((visibility("default"))) void uv_key_delete(uv_key_t *key);
__attribute__((visibility("default"))) void *uv_key_get(uv_key_t *key);
__attribute__((visibility("default"))) void uv_key_set(uv_key_t *key,
                                                       void *value);
__attribute__((visibility("default"))) int uv_gettimeofday(uv_timeval64_t *tv);
typedef void (*uv_thread_cb)(void *arg);
__attribute__((visibility("default"))) int
uv_thread_create(uv_thread_t *tid, uv_thread_cb entry, void *arg);
typedef struct uv_thread_options_s uv_thread_options_t;
__attribute__((visibility("default"))) int
uv_thread_create_ex(uv_thread_t *tid, const uv_thread_options_t *params,
                    uv_thread_cb entry, void *arg);
__attribute__((visibility("default"))) int
uv_thread_setaffinity(uv_thread_t *tid, char *cpumask, char *oldmask,
                      size_t mask_size);
__attribute__((visibility("default"))) int
uv_thread_getaffinity(uv_thread_t *tid, char *cpumask, size_t mask_size);
__attribute__((visibility("default"))) int uv_thread_getcpu(void);
__attribute__((visibility("default"))) uv_thread_t uv_thread_self(void);
__attribute__((visibility("default"))) int uv_thread_join(uv_thread_t *tid);
__attribute__((visibility("default"))) int
uv_thread_equal(const uv_thread_t *t1, const uv_thread_t *t2);
__attribute__((visibility("default"))) void *
uv_loop_get_data(const uv_loop_t *);
__attribute__((visibility("default"))) void uv_loop_set_data(uv_loop_t *,
                                                             void *data);
__attribute__((visibility("default"))) size_t
uv_utf16_length_as_wtf8(const uint16_t *utf16, ssize_t utf16_len);
__attribute__((visibility("default"))) int
uv_utf16_to_wtf8(const uint16_t *utf16, ssize_t utf16_len, char **wtf8_ptr,
                 size_t *wtf8_len_ptr);
__attribute__((visibility("default"))) ssize_t
uv_wtf8_length_as_utf16(const char *wtf8);
__attribute__((visibility("default"))) void
uv_wtf8_to_utf16(const char *wtf8, uint16_t *utf16, size_t utf16_len);